# OpenGL-Graphics-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenGL.sln  README.md
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  imgui.ini
OpenGL/res/Shader/: PickFrag.frag  PickVertex.vert  Vertex.vert
OpenGL/src/: Application.cpp  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OpenGL/src/tests/: Test.h  TestClearColor.cpp  TestClearColor.h
